--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "a"]
 	path = a
 	url = git@github.com:kitsuyui/git-submodule-a-playground.git
+[submodule "b"]
+	path = b
+	url = git@github.com:kitsuyui/git-submodule-b-playground.git
